// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render as an H1 1`] = `
<Heading
  appearance="H1"
>
  <styled.h1>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bdVaJa",
            "isStatic": true,
            "lastClassName": "VCoKk",
            "rules": Array [
              "
  font-size: 2rem;
  line-height: 3rem;
  color: #162d3d;
",
            ],
          },
          "displayName": "styled.h1",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bdVaJa",
          "target": "h1",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <h1
        className="sc-bdVaJa VCoKk"
      >
        Hello World
      </h1>
    </StyledComponent>
  </styled.h1>
</Heading>
`;

exports[`Heading should render as an H2 1`] = `
<Heading
  appearance="H2"
>
  <styled.h2>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bwzfXH",
            "isStatic": true,
            "lastClassName": "dTAZrU",
            "rules": Array [
              "
  font-size: 1.75rem;
  line-height: 2rem;
  color: #162d3d;
",
            ],
          },
          "displayName": "styled.h2",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bwzfXH",
          "target": "h2",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <h2
        className="sc-bwzfXH dTAZrU"
      >
        Hello World
      </h2>
    </StyledComponent>
  </styled.h2>
</Heading>
`;

exports[`Heading should render as an H3 1`] = `
<Heading
  appearance="H3"
>
  <styled.h3>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-htpNat",
            "isStatic": true,
            "lastClassName": "jiDSp",
            "rules": Array [
              "
  font-size: 1.25rem;
  line-height: 1.5rem;
  color: #162d3d;
",
            ],
          },
          "displayName": "styled.h3",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-htpNat",
          "target": "h3",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <h3
        className="sc-htpNat jiDSp"
      >
        Hello World
      </h3>
    </StyledComponent>
  </styled.h3>
</Heading>
`;

exports[`Heading should render as an H4 1`] = `
<Heading
  appearance="H4"
>
  <styled.h4>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-bxivhb",
            "isStatic": true,
            "lastClassName": "fNeiKa",
            "rules": Array [
              "
  font-size: 1.125rem;
  line-height: 1.5rem;
  color: #162d3d;
",
            ],
          },
          "displayName": "styled.h4",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-bxivhb",
          "target": "h4",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <h4
        className="sc-bxivhb fNeiKa"
      >
        Hello World
      </h4>
    </StyledComponent>
  </styled.h4>
</Heading>
`;

exports[`Heading should render as an H5 1`] = `
<Heading
  appearance="H5"
>
  <styled.h5>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-ifAKCX",
            "isStatic": true,
            "lastClassName": "kCOWXr",
            "rules": Array [
              "
  font-size: 0.75rem;
  line-height: 1.5rem;
  color: #32536a;
  text-transform: uppercase;
  letter-spacing: 1px;
",
            ],
          },
          "displayName": "styled.h5",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-ifAKCX",
          "target": "h5",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <h5
        className="sc-ifAKCX kCOWXr"
      >
        Hello World
      </h5>
    </StyledComponent>
  </styled.h5>
</Heading>
`;

exports[`Heading should render as an H6 1`] = `
<Heading
  appearance="H6"
>
  <styled.h6>
    <StyledComponent
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "sc-EHOje",
            "isStatic": true,
            "lastClassName": "edLHym",
            "rules": Array [
              "
  font-size: 0.625rem;
  line-height: 1.125rem;
  color: #162d3d;
  text-transform: uppercase;
  letter-spacing: 1px;
",
            ],
          },
          "displayName": "styled.h6",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "sc-EHOje",
          "target": "h6",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <h6
        className="sc-EHOje edLHym"
      >
        Hello World
      </h6>
    </StyledComponent>
  </styled.h6>
</Heading>
`;
